added favicon and title

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hey everyone!
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <title> Vatsal Srivastava | Home </title>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+</head>
+
+<body align='center'>
+    <h1>Hey everyone!</h1>
+</body>
+
+</html>
