--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> Vatsal Srivastava | Home </title>
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/omni_simple_fit.ico" type="image/x-icon" />
 </head>
 
 <body align='center'>
